--- a/public/style.css
+++ b/public/style.css
@@ -93,7 +93,25 @@ form input[type=submit]:hover {
 }
 
 #routes {
-    margin: 2vh;
+    /* margin: 2vh;
+    display: inline;
+    list-style: none;
+    padding-top: 20px; */
 }
 
-li {}
+ul {
+    width: 100%;
+    height: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+}
+
+li {
+    display: block;
+    float: left;
+    background: rgba(75, 209, 219, 0.904);
+    color: white;
+    margin-right: 10px;
+    opacity: 0.9;
+}
