--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,7 @@ header {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    flex-direction: row;
 }
 
 #form {
@@ -44,6 +45,7 @@ form {
 }
 
 form input {
+    outline: none;
     width: 60vw;
     height: 5vh;
     margin: 7px;
@@ -57,6 +59,7 @@ form input {
 }
 
 form input[type=text] {
+    max-width: 450px;
     color: limegreen !important;
     text-transform: uppercase;
     font-size: large;
@@ -68,13 +71,14 @@ form input[type=text] {
 }
 
 form input[type=text]:hover {
-    background: rgb(116, 114, 114) !important;
+    background: rgb(238, 238, 238) !important;
     border-radius: 50px;
-    border-color: rgb(116, 114, 114) !important;
+    border-color: rgb(238, 238, 238) !important;
     transition: all 0.3s ease 0s;
 }
 
 form input[type=submit] {
+    max-width: 450px;
     color: limegreen !important;
     text-transform: uppercase;
     font-size: large;
@@ -86,25 +90,17 @@ form input[type=submit] {
 }
 
 form input[type=submit]:hover {
-    background: rgb(116, 114, 114) !important;
+    background: rgb(238, 238, 238) !important;
     border-radius: 50px;
-    border-color: rgb(116, 114, 114) !important;
+    border-color: rgb(238, 238, 238) !important;
     transition: all 0.3s ease 0s;
 }
 
 #routes {
-    /* margin: 2vh;
-    display: inline;
-    list-style: none;
-    padding-top: 20px; */
-}
-
-ul {
-    width: 100%;
-    height: 20px;
-    text-align: center;
+    max-width: 450px;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    flex-direction: column;
 }
 
 li {
@@ -112,6 +108,7 @@ li {
     float: left;
     background: rgba(75, 209, 219, 0.904);
     color: white;
-    margin-right: 10px;
+    margin: 10px;
     opacity: 0.9;
+    width: 400px;
 }
