--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,7 @@ header {
 #main-container {
     padding: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     flex-direction: row;
 }
@@ -50,7 +50,6 @@ form input {
     height: 5vh;
     margin: 7px;
     text-align: center;
-    cursor: pointer;
 }
 
 ::placeholder {
@@ -59,13 +58,14 @@ form input {
 }
 
 form input[type=text] {
+    cursor: text;
     max-width: 450px;
     color: limegreen !important;
     text-transform: uppercase;
     font-size: large;
     background: white;
     border-radius: 6px;
-    border: 4px solid black !important;
+    border: 2px solid black !important;
     display: inline-block;
     transition: all 0.3 ease 0s;
 }
@@ -78,13 +78,14 @@ form input[type=text]:hover {
 }
 
 form input[type=submit] {
+    cursor: pointer;
     max-width: 450px;
     color: limegreen !important;
     text-transform: uppercase;
     font-size: large;
     background: white;
     border-radius: 6px;
-    border: 4px solid black !important;
+    border: 2px solid black !important;
     display: inline-block;
     transition: all 0.3 ease 0s;
 }
@@ -105,10 +106,14 @@ form input[type=submit]:hover {
 
 li {
     display: block;
+    border: 2px solid black !important;
+    border-radius: 10px;
+    cursor: pointer;
     float: left;
-    background: rgba(75, 209, 219, 0.904);
-    color: white;
+    background: white;
+    color: black;
     margin: 10px;
     opacity: 0.9;
     width: 400px;
+    padding: 15px;
 }
